# format-whatsapp-export

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  checkstaticfiles.config.yaml  go.mod  go.sum  main.go  package.json  parse.go  template.htm
.github/workflows/: build.yml  linux_build.yml  release_build.yml
crates/format-whatsapp-export/: Cargo.toml
crates/format-whatsapp-export/src/: main.rs
crates/msg_parser/: Cargo.toml  README.md
crates/msg_parser/benches/: msg_parsing.rs
crates/msg_to_json/: Cargo.toml
crates/msg_to_json/src/: lib.rs
crates/wa_msg_to_json/: Cargo.toml
crates/wa_msg_to_json/src/: lib.rs
old_version/: main.go
old_version/.github/workflows/: build.yml
old_version/static/: dom.js  style.css
public/: index.html
src/: index.ts  main.rs
static/: dom.js  style.css  template.html
v1_go_version/: README.md  parse.go  template.htm
v1_go_version/.github/workflows/: build.yml
v1_go_version/static/: dom.js  style.css  template.html
v2_ts_version/: README.md
v2_ts_version/public/: main.js
v2_ts_version/src/: index.ts
