# cargo run -p format-whatsapp-export --release

[workspace]
members = [
    "crates/format-whatsapp-export",
    "crates/wa_msg_to_json"
]
resolver = "3"

[workspace.dependencies]
wa_msg_to_json = { path = "crates/wa_msg_to_json" }

[profile.dev]
opt-level = 0      # fastest build, slowest runtime
lto = false        # "thin" works, but slows compile
strip = false      # dont strip debug infos
debug = true
incremental = true

[profile.release]
opt-level = 3       # 0 -> no optimizing, 3 -> max speed
lto = "fat"         # oder "thin" für schnelleren Build
codegen-units = 1   # bessere Optimierung, aber langsamerer Compile
panic = "abort"     # spart etwas Platz, leicht schneller
strip = true        # entfernt Debug-Symbole (optional)
debug = false
incremental = false
