[package]
name = "format-whatsapp-export"
version = "0.1.0"
edition = "2024"
default-run = "format-whatsapp-export"
description = "Tool for analysing Whatsapp Exports"
license = "Apache-2.0"
repository = "https://github.com/ShadowDara/format-whatsapp-export"


[dependencies]
rfd = "0.15.4"
win-utf8-rs = "0.2.0"
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }
wa_msg_parser = { version = "0.2.3", features = ["json", "serde"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 0      # fastest build, slowest runtime
lto = false        # "thin" works, but slows compile
strip = false      # dont strip debug infos
debug = true
incremental = true

[profile.release]
opt-level = 3       # 0 -> no optimizing, 3 -> max speed
lto = "fat"         # oder "thin" für schnelleren Build
codegen-units = 1   # bessere Optimierung, aber langsamerer Compile
panic = "abort"     # spart etwas Platz, leicht schneller
strip = true        # entfernt Debug-Symbole (optional)
debug = false
incremental = false
